--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "outDir": "./src/js",
-    "rootDir": "./src/ts",
+    "outDir": "./public/js",
+    "rootDir": "./src",
     "target": "es6",
     "module": "ES2020",
     "strict": true,
